# HomeCenter

./: cleanup.sh
DiskCleanup/: Program.cs
FileCollector/: Arguments.cs  FileCollector.sln  FileInfoRecord.cs  Program.cs
FileCollector/Properties/: launchSettings.json
HomeCenter/: Directory.Build.props  LICENSE.txt  Obvs.sln
HomeCenter/Adoc/: JTS.adoc  MetricsAspire.adoc
HomeCenter/Apps/ShutterService.App/eMQTT5/ShutterService.App/: CMakeLists.txt  MQTTc.cpp
HomeCenter/Apps/ShutterService.App/eMQTT5/ShutterService.App/ClassPath/include/Network/: Address.hpp
HomeCenter/Apps/ShutterService.App/eMQTT5/ShutterService.App/ClassPath/include/Time/: Time.hpp
HomeCenter/Apps/ShutterService.App/eMQTT5/ShutterService.App/ClassPath/src/: Address.cpp  Logger.cpp  bstrlib.c
HomeCenter/JTS/: JTS.csproj  JTSData.cs  JTSF.cs  JTSFValue.cs  JTSHValue.cs  JTSHeader.cs  JTSHeaderColumns.cs  JTSRoot.cs
HomeCenter/LiveCharts2/: LiveCharts.Maui.sln
HomeCenter/MQTTnet.Rx/: Directory.Build.props
HomeCenter/Obvs.ActiveMQ/: Obvs.ActiveMQ.csproj
HomeCenter/Obvs.ActiveMQ.Test.Client/: Obvs.ActiveMQ.Test.Client.csproj
HomeCenter/Obvs.ActiveMQ.Test.Service/: Obvs.ActiveMQ.Test.Service.csproj
HomeCenter/Obvs.ActiveMQ.Tests/: Obvs.ActiveMQ.Tests.csproj
HomeCenter/Obvs.Kafka/: Obvs.Kafka.csproj  WrapperMessage.cs
HomeCenter/Obvs.Kafka.Tests/: Obvs.Kafka.Tests.csproj
HomeCenter/Obvs.Logging.NLog/: Obvs.Logging.NLog.csproj
HomeCenter/Obvs.Logging.Tests/: Obvs.Logging.Tests.csproj
HomeCenter/Obvs.Monitoring.AppMetrics/: Obvs.Monitoring.AppMetrics.csproj
HomeCenter/Obvs.Monitoring.ElasticSearch/: ElasticSearchMonitor.cs  ElasticSearchMonitorFactory.cs  Obvs.Monitoring.ElasticSearch.csproj  ObvsCounter.cs
HomeCenter/Obvs.Monitoring.PerformanceCounters/: Obvs.Monitoring.PerformanceCounters.csproj
HomeCenter/Obvs.Monitoring.Tests/: Obvs.Monitoring.Tests.csproj  TestElasticSearchMonitoring.cs
HomeCenter/Obvs.NATS.Tests/: Obvs.NATS.Tests.csproj
(+365 files in other folders)
